Adding additional properties to telemetry. Set MicrosoftTelemetryConnectionString to an empty string in settings to opt-out.

4.0.8
Add parameter 'features' to Run-AlPipeline which allows for setting the compiler features 
Add SchemaSyncMode to Publish-PerTenantExtensionApps
Use submodules inside BcContainerHelper

4.0.7
Issue #2765 Unused param in Publish-BuildOutputToAzureFeed.ps1
Fix multiple layout files with same file name in BC21
Add parameter ContainerEventLogFile to Run-AlPipeline to extract container event log after run
Add new parameter to Run-TestsInBcContainer - renewClientContextBetweenTests to renew client context between tests
Add new parameter to New-BcImage - databaseBackupPath which allows selecting custom backup (in place of original backup from artifacts)
Add new setting renewClientContextBetweenTests as default value for the same parameter in Run-TestsInBcContainer
Change PR process for ContainerHelper
Wait for tenants to be ready after Restart-BcContainer
Issue #2798 Get-NavContainerSharedFolders returns error The length must not be less than 0 (zero)

4.0.6
Check latest allowed runtime version in Run-AlValidation
Add PROOF OF CONCEPT PREVIEW functions to work with Business Central NuGet packages: New-BcNuGetPackage, Get-BcNuGetPackage, Push-BcNuGetPackage and New-ALGoNuGetContext
BcContainerHelper is now signed with a Code Signing certificate
Issue #2727 Retry download from direct download URL if CDN download was corrupt
Issue #2718 Add setting NoOfSecondsToSleepAfterPublishBcContainerApp to be able to setup wait time to avoid race condition when publishing some apps to online tenants using Dev Endpoint
AL-Go issue https://github.com/microsoft/AL-Go/issues/228
Issue #2745 Support for Windows 10 22H2
Add parameter TreatTestFailuresAsWarnings to Run-AlPipeline
Add parameter knownApps to Sort-AppFoldersByDependencies, to return all known apps in sorted folders
Issue #2757 Fail early if .flf license file is specified for BC 22 or later containers