@@ -3,5 +3,5 @@
 . (Join-Path $PSScriptRoot "AL-Go\New-ALGoAppSourceContext.ps1")
 . (Join-Path $PSScriptRoot "AL-Go\New-ALGoStorageContext.ps1")
 . (Join-Path $PSScriptRoot "AL-Go\New-ALGoNugetContext.ps1")
-#. (Join-Path $PSScriptRoot "AL-Go\New-ALGoRepo.ps1")
+. (Join-Path $PSScriptRoot "AL-Go\New-ALGoRepo.ps1")
 #. (Join-Path $PSScriptRoot "AL-Go\New-ALGoRepoWizard.ps1")
